--- a/wizualizacje_danych.Rmd
+++ b/wizualizacje_danych.Rmd
@@ -1,3 +1,13 @@
+```{r}
+library(httr)
+library(jsonlite) 
+library(sp)
+library(spatstat)
+library(sf)
+library(automap)
+library(tmaptools)
+
+```
 
 
 ```{r}
@@ -17,7 +27,8 @@ lista_danych <- lapply(files, function(f) {
 
 ```{r}
 #teraz tak działa odwoływanie się
-lista_danych[[1]][[30]]$current$values
+lista_danych[[9]][[64]]$current$values
+
 
 ```
 
@@ -50,8 +61,133 @@ lista_pm25 <- lapply(lista_danych, get_pm25)
 
 
 #sprawdzenie
-lista_pm25[[1]][30]
+lista_pm25[[9]][64]
+```
+```{r}
+#do pobrania samych stacji jakie są
+#wzielam srodek Krakowa jako wspolrzedne (50.04666667N, 20.00486111E) i odleglosc 25km, zeby Nowa Hute tez na pewno lapało
+
+r <- GET("https://airapi.airly.eu/v2/installations/nearest?lat=50.04666667&lng=20.00486111&maxDistanceKM=25&maxResults=-1", 
+         add_headers(apikey = "TAScUh3ZHNuoMD3VgAr1NhuDyT9KbwW3", Accept = "application/json")
+)
+```
+
+```{r}
+jsonRespText<-content(r,as="text")
+lista_czujnikow<-fromJSON(jsonRespText)
+
+#tworzymy ramkę df - z danymi o lokalizacji, wysokości i id czjników
+longitude<-lista_czujnikow$location$longitude
+latitude<-lista_czujnikow$location$latitude
+df_czujniki<-data.frame(longitude,latitude)
+df_czujniki$elevation<-lista_czujnikow$elev #wysokość nie bedzie potrzebna, ale niech będzie
+df_czujniki$id<-lista_czujnikow$id
+head(df_czujniki)
+#View(df_czujniki)
 ```
 
 
+```{r}
+data_spat<-data.frame(lon=df_czujniki$longitude,lat=df_czujniki$latitude,elev=df_czujniki$elev,id=df_czujniki$id)
+coordinates(data_spat) <- ~lon+lat #określamy, które elementy to koordynaty (potrzebne do ppp)
+proj4string(data_spat) <- CRS("+proj=longlat +datum=WGS84") #określamy, jaki mamy układ
+head(data_spat) # mamy już obiekt w układzie sferycznym, który można automatycznie konwertować
+
+#konwersja do UTM (bo tworzymy ppp, a to jego układ)
+data_UTM <- spTransform(data_spat, CRS("+proj=utm +zone=34 +datum=WGS84"))
+
+#aby utworzyć obiekt ppp, ale tylko z czujnikami w Krakowie, musimy mieć kontur Krakowa, którym przytniemy data_UTM 
+#tworzymy więc odpowiedni obiekt w ukłądzie UTM (zmienna krakowUTM)
+dzielnice<-st_read("dzielnice_Krakowa.shp") #układ odniesienia(CRS) to ETRS89 (Poland CS92)
+# konwertujemy do WGS84
+dzielniceWGS84<-st_transform(dzielnice,crs = 4326) # "4326" to kod dla WGS84
+# zostawiamy tylko kontur miasta 
+krakowWGS84<-st_union(dzielniceWGS84)
+#konwertujemy go na UTM
+krakowUTM<-st_transform(krakowWGS84,CRS("+proj=utm +zone=34 +datum=WGS84"))
+
+#teraz możemy już utworzyć obiekt ppp z danymi ("marks") w punktach (uwaga: dane to id), przycięcie oknem krakowUTM
+#jeszcze zmienna pomocnicza z koordynatami (bo spTransform wprowadza swoje nazwy kolumn z koordynatami)
+XY<-coordinates(data_UTM)
+#i obiekt ppp 2D:
+czujniki_ppp_id<-ppp(x=XY[,1],y=XY[,2],marks=data.frame(elev=data_UTM$elev,id=data_UTM$id),window=as.owin(krakowUTM))
+czujniki_ppp_id$marks$id #mamy od razu tylko te id które są w Krakowie
+```
+```{r}
+czujniki_spdf <- as.data.frame(czujniki_ppp_id)
+coordinates(czujniki_spdf) <- ~x+y # koordynaty
+proj4string(czujniki_spdf) <- CRS("+proj=utm +zone=34 +datum=WGS84") # układ odniesienia
+# dodajemy kolumny z pm
+
+pm25_names <- c(
+  "pm25_04_8",  "pm25_04_16",  "pm25_04_21",
+  "pm25_09_8",  "pm25_09_16",  "pm25_09_21",
+  "pm25_12_8",  "pm25_12_16",  "pm25_12_21", "pm25_14_20"
+)
+
+czujniki_spdf@data[pm25_names] <- lista_pm25
+#teraz mamy 9 dodatkowych kolumn z danymi
+head(czujniki_spdf)
+#View(czujniki_spdf@data)
+plot(czujniki_spdf)
+```
+
+
+
+```{r}
+
+miss <-lapply(pm25_names, function(colname) {
+  is.na(czujniki_spdf@data[[colname]])
+})
+
+names(miss) <-paste0("miss_",pm25_names)
+#miss
+```
+
+```{r}
+
+#i kriging na wypasie, jeszcze raz to co już było tylko "marks" jest zmienione na "current"
+#zarys krakowa w odpowiednim formacie
+bound<-st_as_sf(krakowUTM)
+plot(bound)
+##pobierzmy współrzędne punktów konturu w formie macierzy
+coord<-as.data.frame(st_coordinates(krakowUTM))
+#tworzymy siatkę - prostokąt okalajacy kontur Krakowa
+##określamy współrzędne naroży
+left_down<-c( min(coord$X), min(coord$Y))
+right_up<-c( max(coord$X), max(coord$Y))
+##ustalamy rozmiar oczka siatki (100x100 metrów)
+size<-c(100,100)
+##przeliczamy: ile oczek siatki przypada na długość i szerokość naszego prostokąta 
+points<- (right_up-left_down)/size
+num_points<-ceiling(points) #zaokrąglenie w górę 
+#wreszcie siatka
+grid <- GridTopology(left_down, size,num_points)
+# kowersja siatki do odpowiedniego formatu, w odpowiednim układzie (tu: WGS84)
+gridpoints <- SpatialPoints(grid, proj4string = CRS("+proj=utm +zone=34 +datum=WGS84"))
+plot(gridpoints) #czekamy cierpliwie
+
+#przycinamy siatkę konturem funkcją crop_shape z pakietu tmaptools
+#install.packages("tmaptools")
+
+g<-st_as_sf(gridpoints)#konwersja do formatu na którym działa crop_shape
+cg<-crop_shape(g,bound,polygon = TRUE)
+spgrid <- SpatialPixels(as_Spatial(cg))#konwersja z powrotem do st i następnie do SpatialPixels
+plot(spgrid)
+```
+
+```{r}
+for (colname in pm25_names) {
+  miss_vec <- miss[[paste0("miss_", colname)]]
+  PM25_gauss <- autoKrige(as.formula(paste(colname, "~ 1")), input_data = czujniki_spdf[!miss_vec,],new_data=spgrid,  model="Exp")
+  
+  print(plot(PM25_gauss$krige_output[1],main=colname))
+  print(points(czujniki_ppp_id[!miss_vec,],pch="*",col="White"))
+  print(plot(PM25_gauss))
+}
+```
+
+```{r}
+plot(PM25_auto)
+```
 
