--- a/wizualizacje_danych.Rmd
+++ b/wizualizacje_danych.Rmd
@@ -27,7 +27,7 @@ lista_danych <- lapply(files, function(f) {
 
 ```{r}
 #teraz tak działa odwoływanie się
-lista_danych[[2]][[64]]$current$values
+lista_danych[[2]][[6]]$current$values
 
 
 ```
@@ -61,8 +61,9 @@ lista_pm25 <- lapply(lista_danych, get_pm25)
 
 
 #sprawdzenie
-lista_pm25[[9]][64]
+lista_pm25[[1]][64]
 ```
+
 ```{r}
 #do pobrania samych stacji jakie są
 #wzielam srodek Krakowa jako wspolrzedne (50.04666667N, 20.00486111E) i odleglosc 25km, zeby Nowa Hute tez na pewno lapało
@@ -138,11 +139,70 @@ plot(czujniki_spdf)
 
 miss <-lapply(pm25_names, function(colname) {
   is.na(czujniki_spdf@data[[colname]])
+    
 })
 
-names(miss) <-paste0("miss_",pm25_names)
-#miss
+
+for (row in seq_len(nrow(czujniki_spdf@data))){
+  if(rowSums(as.data.frame(czujniki_spdf@data[row,3:12]))<100 | rowSums(is.na(as.data.frame(czujniki_spdf@data[row,3:12]))) > 0 | row == 2){
+       for( i in seq(1,length(miss))){
+         miss[[i]][row] = TRUE
+       }
+    }
+}
+
+
+names(miss) <- paste0("miss_", pm25_names)
+
+
+miss
+
+for (colname in pm25_names){
+  miss_vec <- miss[[paste0("miss_", colname)]]
+  m<-sort(czujniki_spdf@data[!miss_vec,colname],decreasing = FALSE)[10]
+  w<-sort(czujniki_spdf@data[!miss_vec,colname],decreasing = TRUE)[3]
+  for( r in  seq_len(nrow(czujniki_spdf@data))){
+    
+    if((czujniki_spdf@data[r,colname]<=m)| (czujniki_spdf@data[r,colname]>=w)|is.na(czujniki_spdf@data[r,colname])){
+      miss[[paste0("miss_", colname)]][r] <- TRUE
+      #print(r)
+      #print(miss[[colname]][r])
+    }else{
+      miss[[paste0("miss_", colname)]][r] <- FALSE
+    }
+  }
+}
+
+sum(miss[[colname]])
 ```
+
+```{r}
+colname<-pm25_names[1]
+miss_vec <- miss[[paste0("miss_", colname)]]
+m<-sort(czujniki_spdf@data[!miss_vec,colname])[20]
+m
+for( r in  seq_len(nrow(czujniki_spdf@data))){
+  if((czujniki_spdf@data[r,1]<m)|is.na(czujniki_spdf@data[r,colname])){
+    miss[[colname]][r] <- TRUE
+    print(r)
+    print(miss[[colname]][r])
+  }else{
+    miss[[colname]][r] <- FALSE
+  }
+}
+sum(miss[[1]])
+```
+
+```{r}
+a<-as.data.frame(czujniki_spdf[!miss_vec,3:12])
+a<-a[1:10]
+working<-!(rowSums(a)<50 | is.na(rowSums(a)))
+working
+length(working)
+miss_vec
+```
+
+
 
 ```{r}
 
@@ -175,17 +235,43 @@ cg<-crop_shape(g,bound,polygon = TRUE)
 spgrid <- SpatialPixels(as_Spatial(cg))#konwersja z powrotem do st i następnie do SpatialPixels
 plot(spgrid)
 ```
+```{r}
+colname
+colname <- "pm25_04_8"
+miss_vec <- miss[[paste0("miss_", colname)]]
+miss_vec
+czujniki_spdf[!miss_vec,]
+a<-as.data.frame( czujniki_spdf[!miss_vec,3:12] )
+a<-a[1:10]
+
+is.na(any(a))
+working<-(rowSums(a)<50  )
+working<-(working==FALSE | is.na(working))
+working  
+czujniki_spdf[!miss_vec,][working,]
+
+
+miss_vec<-miss[[2]]
+czujniki_spdf[!miss_vec,colname]
+
+```
 
 ```{r}
+
 for (colname in pm25_names) {
   miss_vec <- miss[[paste0("miss_", colname)]]
-  PM25_gauss <- autoKrige(as.formula(paste(colname, "~ 1")), input_data = czujniki_spdf[!miss_vec,],new_data=spgrid,  model="Exp")
+  print(miss_vec)
+  PM25_gauss <- autoKrige(as.formula(paste(colname, "~ 1")), input_data = czujniki_spdf[!miss_vec,colname], new_data=spgrid,  model="Sph")
   
+  
+  print(nrow(czujniki_spdf[!miss_vec,colname]))
   print(plot(PM25_gauss$krige_output[1],main=colname))
   print(points(czujniki_ppp_id[!miss_vec,],pch="*",col="White"))
   print(plot(PM25_gauss))
 }
+
 ```
+
 
 ```{r}
 plot(PM25_auto)
