--- a/pobieranie_danch.rmd
+++ b/pobieranie_danch.rmd
@@ -48,13 +48,29 @@ data_UTM <- spTransform(data_spat, CRS("+proj=utm +zone=34 +datum=WGS84"))
 #tworzymy więc odpowiedni obiekt w ukłądzie UTM (zmienna krakowUTM)
 #install.packages("sf")
 library(sf)
+library(ggplot2)
 dzielnice<-st_read("dzielnice_Krakowa.shp") #układ odniesienia(CRS) to ETRS89 (Poland CS92)
+paleniska<-st_read("Potencjalnie_czynne_paleniska_w_2025.shp")
+
+
+paleniska92<-st_transform(paleniska,crs = 2180)
+centroids <- st_centroid(paleniska92)
+paleniska_df <- cbind(st_coordinates(centroids),st_drop_geometry(centroids))
+
+ggplot() +
+  geom_sf(data = dzielnice, fill = "lightblue", color = "black") +
+  geom_sf(data = paleniska, fill = NA, color = "red", linewidth = 1) +
+  theme_minimal()
+
 # konwertujemy do WGS84
 dzielniceWGS84<-st_transform(dzielnice,crs = 4326) # "4326" to kod dla WGS84
+
 # zostawiamy tylko kontur miasta 
 krakowWGS84<-st_union(dzielniceWGS84)
 #konwertujemy go na UTM
 krakowUTM<-st_transform(krakowWGS84,CRS("+proj=utm +zone=34 +datum=WGS84"))
+#paleniskaUTM<-st_transform(paleniskaWGS84,CRS("+proj=utm +zone=34 +datum=WGS84"))
+
 
 #teraz możemy już utworzyć obiekt ppp z danymi ("marks") w punktach (uwaga: dane to id), przycięcie oknem krakowUTM
 #jeszcze zmienna pomocnicza z koordynatami (bo spTransform wprowadza swoje nazwy kolumn z koordynatami)
@@ -162,42 +178,54 @@ emitory_UTM <- spTransform(
 )
 
 
-XY2 <- coordinates(emitory_UTM)
+
+
+coordinates(paleniska_df) <- ~X+Y
+proj4string(paleniska_df) <- CRS("+init=epsg:2180")
+
+paleniska_UTM <- spTransform(
+  paleniska_df,
+  CRS("+proj=utm +zone=34 +datum=WGS84 +units=m +no_defs")
+)
+
+
+
+XY2 <- coordinates(paleniska_UTM)
 head(XY2)
 
 
-emitory_ppp <- ppp(
+paleniska_ppp <- ppp(
   x = XY2[,1],
   y = XY2[,2],
   window=as.owin(krakowUTM)
 )
 
 plot(data15_ppp)
-plot(emitory_ppp, add=TRUE, pch=20, col='red')
+plot(paleniska_ppp, add=TRUE, pch=20, col='red')
+
 ```
 ```{r}
 library(dplyr)
 
 
-
-emitory_sf  <- st_as_sf(emitory_UTM)
+paleniska_sf  <- st_as_sf(paleniska_UTM)
 czujniki_sf <- st_as_sf(data_in)
 
-dist_mat <- st_distance(czujniki_sf, emitory_sf)
+dist_mat <- st_distance(czujniki_sf, paleniska_sf)
 dist_mat <- as.numeric(dist_mat) 
-dim(dist_mat) <- c(nrow(czujniki_sf), nrow(emitory_sf)) 
-bandwidth <- 10000  # meters (your effective buffer size)
+dim(dist_mat) <- c(nrow(czujniki_sf), nrow(paleniska_sf)) 
+bandwidth <- 2500  # meters (your effective buffer size)
 
 weights <- exp(-(dist_mat^2) / (2 * bandwidth^2))
 
-czujniki_sf$emitory <- rowSums(weights)
+czujniki_sf$paleniska <- rowSums(weights)
 
 
 corr_df <- data.frame(
   matrix(ncol = 4, nrow = 0)  # 3 columns, 0 rows
 )
 
-colnames(corr_df) <- c("id","PM10","PM25","emitery")
+colnames(corr_df) <- c("id","PM10","PM25","paleniska")
 
 
 for (i in 1:64) {
@@ -206,7 +234,7 @@ for (i in 1:64) {
   
   if (is.null(PM10) || length(PM10) == 0) PM10=-1
   if (is.null(PM25) || length(PM25) == 0) PM25=-1
-  corr_df <- rbind(corr_df, data.frame(id = i, PM10=PM10, PM25=PM25, emitery=czujniki_sf$emitory[i]))
+  corr_df <- rbind(corr_df, data.frame(id = i, PM10=PM10, PM25=PM25, emitery=czujniki_sf$paleniska[i]))
 }
 
 
